correct for height of fixed header for jumplinks and add h2 for about section

--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ header {
 	padding-top: 50px;
 }
 
+/*correct for height of fixed header*/
+#about:target::before, #projects:target::before {
+	content: "";
+	display: block;
+	height: 60px;
+	margin: -60px 0 0;
+}
+
 #intro {
 	box-sizing: border-box;
 	padding: 10% 5%;
@@ -96,7 +104,7 @@ header {
 }
 
 /*ABOUT*/
-#about p {
+#about div {
 	grid-column-start: 2;
 	grid-column-end: span 3;
 }
